tests/parser/parse-cond.3.bad.error
error: Malformed cond clause
  --> test:4:16
   |
 4 |  (define x (cond (1 2 . 3)))
   |                  ^^^^^^^^^ unexpected dotted list
